--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rozvrh</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div class="bobik">
     <table>
+        <caption>Rozvrh třídy E1C</caption>
         <thead>
-            <th></th>
+            <th class="bobik--ee">bobik</th>
             <th>0</th>
             <th>1</th>
             <th>2</th>
@@ -31,6 +34,7 @@
                 <td rowspan="2">TED</td>
                 <td rowspan="2">CHE</td>
                 <td rowspan="2">ZAE</td>
+                <td rowspan="2"></td>
             </tr>
             <tr>
                 <td>IKT</td>
@@ -47,6 +51,7 @@
                 <td rowspan="2"></td>
                 <td rowspan="2">TEV</td>
                 <td rowspan="2">TEV</td>
+                <td rowspan="2"></td>
             </tr>
             <tr>
                 <td>NEJ</td>
@@ -79,6 +84,9 @@
                 <td>PRA</td>
                 <td>PRA</td>
                 <td rowspan="3">FYZ</td>
+                <td rowspan="3"></td>
+                <td rowspan="3"></td>
+                <td rowspan="3"></td>
             </tr>
             <tr>
                 <td>PRA</td>
@@ -98,11 +106,16 @@
                 <td rowspan="2">CJL</td>
                 <td>ANJ</td>
                 <td rowspan="2">MAT</td>
+                <td rowspan="2"></td>
+                <td rowspan="2"></td>
+                <td rowspan="2"></td>
+                <td rowspan="2"></td>
             </tr>
             <tr>
                 <td>ANJ</td>
             </tr>
         </tbody>
     </table>
+    </div>
 </body>
 </html>
