--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +11,7 @@
     <table>
         <caption>Rozvrh třídy E1C</caption>
         <thead>
+            <tr>
             <th class="bobik--ee">bobik</th>
             <th>0</th>
             <th>1</th>
@@ -21,6 +23,7 @@
             <th>7</th>
             <th>8</th>
             <th>9</th>
+            </tr>
         </thead>
         <tbody>
             <tr> 
